# codebase-mindmap

./: .gitignore  README.md  index.html  main.py  manage.py  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.json  vite.config.js
api/: serializers.py  urls.py  views.py
codebase_mindmap/: asgi.py  settings.py  urls.py  wsgi.py
core/: admin.py  forms.py  models.py  views.py
core/migrations/: 0001_initial.py  0002_alter_mindmap_data.py  0003_alter_mindmap_data.py
core/static/css/: input.css  output.css
core/static/js/vite/: bundle.js  editor.js  index.html  main.js  misc.js  modals.js
core/static/js/vite/assets/: vendor-ui-D7P68IX3.js
core/static/ts/: base.ts  d3-tree-manager.ts  editor.md  editor.ts  initAlpineComponents.ts  interfaces.ts  managers.ts  misc.ts  modals.ts  setup.ts  test.ts  toast.ts  tree-datastructure.ts  tree-test.ts  utils.ts
core/static/ts/extensions/: linkPreview.ts  youtube.ts
core/static/ts/types/: htmx-shim.d.ts
core/templates/core/components/: navbar.html
core/templates/core/components/customSelect/: select.html  select.py
core/templates/core/pages/: base.html  mindmaps.html  sandbox.html  test.html
core/templates/pages/: base.html  test.html
core/templatetags/: custom_filters.py
docs/: D3.js-library.md  alpine-scope-and-ancestor-methods.md  convert-d3-tree-to-custom-tree.md  the-alpine-editor.md
docs/prompts/: design-system-prompt.md
docs/prompts/agnostic/: design-system-prompt.md
docs/prompts/project/: modals-system-prompt.md
src/: main.js
(+25 files in other folders)
