[project]
name = "codebase-mindmap"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asgiref==3.9.1",
    "django==5.2.5",
    "django-components==0.141.4",
    "djangorestframework==3.16.1",
    "djc-core-html-parser==1.0.2",
    "sqlparse==0.5.3",
    "typing-extensions==4.15.0",
    "tzdata==2025.2",
]
